Test disabled, that require running containers (NLP, Kroki, Postgres)